--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <a href="https://github.com/andersonsilvasw">/andersonsilvasw</a>
+            <div>
+                <img src="img/github.svg.svg" alt="Github">
+                <a href="https://github.com/andersonsilvasw">/andersonsilvasw</a> 
+            </div>
         </nav>
     </header>
 </body>
