--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
                         <div class="dsmovie-card-description">
                             <h3>The Witcher</h3>
-                            <a class="dsmoviebtn" href="form.html">Avaliar</a>
+                            <div>
+                                <h4>3.8</h4>
+                                <div class="dsmovie-card-description-bottom">
+                                    <img src="img/star-full.svg.svg" alt="Star">
+                                    <img src="img/star-full.svg.svg" alt="Star">
+                                    <img src="img/star-full.svg.svg" alt="Star">
+                                    <img src="img/star-half.svg.svg" alt="Star">
+                                    <img src="img/star-empty.svg.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmoviebtn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
